2004-06-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b220

	* Change:  "!isset($page)" to "empty($page)"
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=81113#81113

2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b219

	* Change: sessions - phpNuke requires session_start(), postNuke errors
	  on it.  Check...

	* Change: Match casing on 'configuration wizard' for admin links

2004-06-25  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b218

	* Change: A litte less tables in view_album and some minor changes for layout of caption

2004-06-25  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b217

	* Fix: Gallery didnt recognized a log out from GeekLog

2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b216

	* Add: Random Block - added and updated to use our save serialization
	  functions

	* Change: album->canReadRecurse() - change "global $albumDB" to a new
	  albumDB, since not all callers have established an albumDB.

2004-06-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b215

	* Change: Suppress non-essential ini_set() error message, if server disallows
	  ini_set()

	* Change: Only execute start_session() if we're not embedded.
	  When embedded, this throws an "already started" error message with devMode on.

2004-06-24 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b214

	* Fix: Bug #978297; User-Language was not saved for selfregisterd users.

2004-06-23 Chris Kelly <ckdake@users.sf.net>  1.4.4-cvs-b213

        * Fix: quoted attribute for better HTML compliance

2004-06-23 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b212

	* Fix: Added missing ereg Paramater introduced in b210

2004-06-22  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b211

	* Fixed typo in upload (and slideshow) applets for Geeklog.

2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b210

	* Change: config wiz - try and find a closer match to the requested