@@ -1,3 +1,8 @@
+2004-06-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b221
+
+	* Change:  Dumbest bug evar!  Don't re-initialize $albumDB on every call
+	  to a recursive-calling function.  It's slower than you can possibly imagine.
+
 2004-06-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b220
 
 	* Change:  "!isset($page)" to "empty($page)"
